# ExtIO_SDRplay

./: README.md
Linux/: CMakeLists.txt
Linux/src/: .ExtIO_SDRplay.cpp.swp  CMakeLists.txt  ExtIO_SDRplay.cpp  ExtIO_SDRplay.h  ExtIO_SDRplay.rc  dllmain.cpp  exports.def  resource.h
Windows/: ExtIO_SDRplay.vcxproj
Windows/Resources/: Thumbs.db
Windows/src/: ExtIO_SDRplay.cpp  targetver.h
